# holiplan

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  flake.nix  fourmolu.yaml  hie.yaml  holiplan.cabal
app/: Main.hs
nix/services/: holiplan.nix
sql/deploy/: api__holiday_plans.sql  api__users.sql  app__holiday_plans.sql  app__users.sql  auth__sessions.sql
sql/revert/: auth__sessions.sql
src/: DB.hs  Routes.hs
src/Holiplan/: Error.hs  Event.hs  Id.hs  Plan.hs  Session.hs
src/HoliplanWeb/: Auth.hs  Routes.hs  Server.hs
src/HoliplanWeb/Handler/: Error.hs  Plan.hs  Session.hs
