cabal-version:      3.0
name:               holiplan
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs. -- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             SEKUN
maintainer:         sekun@hey.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common shared
    default-language: Haskell2010
    default-extensions:
        NoStarIsType
        DerivingStrategies
        DerivingVia
        ExplicitForAll
        StrictData
        TypeApplications

library
    import: shared
    exposed-modules:
        HoliplanWeb.Routes,
        HoliplanWeb.Server

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base           ^>=4.14.3.0,
        text           ^>=2.0,
        time           ^>=1.11,
        servant        ^>=0.19,
        servant-server ^>=0.19,
        aeson          ^>=2.1,
        hasql          ^>=1.6,
        stm            ^>=2.5,

executable holiplan
    import: shared
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        holiplan,
        base ^>=4.14.3.0,
        wai  ^>=3.2,
        warp ^>=3.3,
        stm  ^>=2.5,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite holiplan-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
